    * An internal function used to install files no longer leaks a file
      descriptor on error. (CNY-3152)
    * Unknown errors while retrieving PGP keys for archive verification
      are gracefully handled. (CNY-3120)
    * cvc refresh now ignores negative cache entries. (CNY-3157)
    * cvc sign properly handles keys specified by key ID, in addition
      to fingerprints. (CNY-3139)

  o Internal Changes:
    * Update handling now looks for preerase trove scripts in the local
      database instead of instantiating full troves from the database and
      looking in those troves.
    * Dependency tables for removed troves are no longer dropped and rebuilt
      during each iteration of dependency solving; they are now incrementally
      built during subsequent iterations.
    * Dependency ordering code now looks in the local database for trove
      references instead of instantiating troves to get that information
    * Code which decides what referenced troves need to be erased when
      collections are erased now:
        - Looks in the local database for trove references instead of
          instantiating troves to get that information
        - Batches reference checks, pin checks, and presence checks across
          troves instead of checking those for each trove individually

  o Bug Fixes:
    * --lsprof option now writes out profiling information even if an
      exception occurs for both the conary and cvc commands
    * Dependency numbers in temporary dependency checking tables no longer
      overlap dependency numbers in the persistent database
    * Dependencies with multiple flags were not marked as satisfied during
      dependency resolution passes, forcing extra work on subsequent passes

Changes in 2.0.43:
  o Internal Changes:
    * Additional information is now included when Conary receives
      corrupt changesets, to assist in diagnosing the cause of
      the changeset corruption. (CNY-2629)

  o Bug Fixes: